--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -24,6 +24,7 @@ add_custom_target(runtime_xcvm_pb_h DEPENDS xcvm.pb.h)
 include_directories(${GSLLITE_INCLUDE_DIRS})
 include_directories(${OPTIONALLITE_INCLUDE_DIRS})
 include_directories(${CHAINER_COMPILER_ROOT_DIR})
+include_directories(${CHAINER_COMPILER_NGRAPH_INCLUDE_DIRS})
 include_directories(${CUDA_INCLUDE_DIRS})
 include_directories(${CMAKE_BINARY_DIR}) # the root build directory instead of `build/runtime`
 add_library(chainer_compiler_runtime
@@ -69,6 +70,9 @@ include_directories(${GOOGLETEST_INCLUDE_DIRS})
 add_executable(runtime_test
   xcvm_test.cc
   )
+target_link_directories(runtime_test
+  PUBLIC
+  ${CHAINER_COMPILER_NGRAPH_LINK_DIRS})
 target_link_libraries(runtime_test
   chainer_compiler_runtime
   chainer_compiler_compiler
@@ -79,6 +83,7 @@ target_link_libraries(runtime_test
   gtest
   gtest_main
   pthread
+  ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
   ${CHAINER_COMPILER_TVM_RUNTIME_LIBRARIES}
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
   )
