--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -33,6 +33,9 @@ add_library(run_onnx_lib
 add_dependencies(run_onnx_lib runtime_xcvm_pb_h onnx_files)
 
 add_executable(run_onnx run_onnx_main.cc)
+target_link_directories(run_onnx
+  PUBLIC
+  ${CHAINER_COMPILER_NGRAPH_LINK_DIRS})
 target_link_libraries(run_onnx
   run_onnx_lib
   chainer_compiler_tools
@@ -43,6 +46,7 @@ target_link_libraries(run_onnx
   onnx
   onnx_proto
   protobuf
+  ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
   ${CHAINER_COMPILER_TVM_LIBRARIES}
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
   )
@@ -56,6 +60,9 @@ if(${CHAINER_COMPILER_ENABLE_OPENCV})
 
   add_executable(train_imagenet train_imagenet_main.cc)
   add_dependencies(train_imagenet runtime_xcvm_pb_h onnx_files)
+  target_link_directories(train_imagenet
+    PUBLIC
+    ${CHAINER_COMPILER_NGRAPH_LINK_DIRS})
   target_link_libraries(train_imagenet
     train_imagenet_lib
     chainer_compiler_tools
@@ -68,6 +75,7 @@ if(${CHAINER_COMPILER_ENABLE_OPENCV})
     onnx_proto
     protobuf
     pthread
+    ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
     ${CHAINER_COMPILER_TVM_LIBRARIES}
     ${CHAINER_COMPILER_CUDA_LIBRARIES}
     ${OpenCV_LIBS}
@@ -80,6 +88,9 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
 
   add_library(run_onnx_core.so MODULE run_onnx_core.cc)
 
+  target_link_directories(run_onnx_core.so
+    PUBLIC
+    ${CHAINER_COMPILER_NGRAPH_LINK_DIRS})
   target_link_libraries(run_onnx_core.so
     PRIVATE
     run_onnx_lib
@@ -92,6 +103,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
     onnx_proto
     protobuf
     pthread
+    ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
     ${CHAINER_COMPILER_TVM_LIBRARIES}
     ${CHAINER_COMPILER_CUDA_LIBRARIES}
     )
@@ -103,6 +115,9 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
   if(${CHAINER_COMPILER_ENABLE_OPENCV})
     add_library(train_imagenet_core.so MODULE train_imagenet_core.cc)
 
+    target_link_directories(train_imagenet_core.so
+      PUBLIC
+      ${CHAINER_COMPILER_NGRAPH_LINK_DIRS})
     target_link_libraries(train_imagenet_core.so
       PRIVATE
       train_imagenet_lib
@@ -116,6 +131,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
       onnx_proto
       protobuf
       pthread
+      ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
       ${CHAINER_COMPILER_TVM_LIBRARIES}
       ${CHAINER_COMPILER_CUDA_LIBRARIES}
       ${OpenCV_LIBS}
