--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,6 +163,7 @@ if(NOT ("${CHAINER_COMPILER_NGRAPH_DIR}" STREQUAL ""))
   set(CHAINER_COMPILER_NGRAPH_INCLUDE_DIRS ${CHAINER_COMPILER_NGRAPH_DIR}/include)
   set(CHAINER_COMPILER_NGRAPH_LINK_DIRS ${CHAINER_COMPILER_NGRAPH_DIR}/lib)
   set(CHAINER_COMPILER_NGRAPH_LIBRARIES ngraph)
+  link_directories(AFTER ${CHAINER_COMPILER_NGRAPH_LINK_DIRS})
 endif()
 
 if(${CHAINER_COMPILER_ENABLE_TVM})
