--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ else()
 endif()
 option(CHAINER_COMPILER_ENABLE_TVM "Enable TVM" ${DEFAULT_CHAINER_COMPILER_ENABLE_TVM})
 
-option(CHAINER_COMPILER_NGRAPH_DIR "The path to ngraph_dist" "")
+option(CHAINER_COMPILER_NGRAPH_DIR "The path to ngraph_dist" OFF)
 
 option(CHAINER_COMPILER_BUILD_TESTS "Build C++ tests" ON)
 option(CHAINER_COMPILER_GENERATE_TESTS "Generate tests for scripts/runtests.py" ON)
@@ -158,7 +158,7 @@ if(${CHAINER_COMPILER_BUILD_CUDA})
   endif()
 endif()
 
-if(NOT ("${CHAINER_COMPILER_NGRAPH_DIR}" STREQUAL ""))
+if(NOT ("${CHAINER_COMPILER_NGRAPH_DIR}" STREQUAL "OFF"))
   add_definitions(-DCHAINER_COMPILER_ENABLE_NGRAPH=1)
   set(CHAINER_COMPILER_NGRAPH_INCLUDE_DIRS ${CHAINER_COMPILER_NGRAPH_DIR}/include)
   set(CHAINER_COMPILER_NGRAPH_LINK_DIRS ${CHAINER_COMPILER_NGRAPH_DIR}/lib)
