Add SaveNpy function for debugging

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -34,6 +34,7 @@ add_library(chainer_compiler_runtime
   chainerx_util.cc
   chrome_tracing.cc
   meminfo.cc
+  npy.cc
   ops/activation.cc
   ops/connection.cc
   ops/controlflow.cc
@@ -68,6 +69,7 @@ add_dependencies(
 
 include_directories(${GOOGLETEST_INCLUDE_DIRS})
 add_executable(runtime_test
+  npy_test.cc
   xcvm_test.cc
   )
 target_link_libraries(runtime_test
