refactor: Simplify setting construction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,65 +6,43 @@ endif()
 
 execute_process(COMMAND git submodule update --init)
 
-include(cmake/third-party.cmake)
+list (INSERT CMAKE_MODULE_PATH 0 ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
-SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
+include(third-party)
 
-if(DEFINED ENV{CHAINER_COMPILER_BUILD_CUDA})
-    set(DEFAULT_CHAINER_COMPILER_BUILD_CUDA $ENV{CHAINER_COMPILER_BUILD_CUDA})
-else()
-    set(DEFAULT_CHAINER_COMPILER_BUILD_CUDA OFF)
-endif()
-option(CHAINER_COMPILER_BUILD_CUDA "Build CUDA backend (if CUDA is available)" ${DEFAULT_CHAINER_COMPILER_BUILD_CUDA})
+# Sets default settings from the associated env-var if existed.
+# Usage:
+#   set_option_ (FOO "Option FOO")
+# is equivalent to:
+#   if (DEFINED ENV{FOO})
+#       option (FOO "Option FOO" $ENV{FOO})
+#   else ()
+#       option (FOO "Option FOO" OFF)
+#   endif ()
+function (set_option_ var_ desc_)
+    if (DEFINED ENV{${var_}})
+        set (def_ $ENV{${var_}})
+        message (STATUS "# ${var_} = $ENV{${var_}}")
+    else ()
+        set (def_ OFF)
+    endif ()
+    option (${var_} ${desc_} ${def_})
+endfunction ()
 
-if(DEFINED ENV{CHAINER_COMPILER_ENABLE_CUDNN})
-    set(DEFAULT_CHAINER_COMPILER_ENABLE_CUDNN $ENV{CHAINER_COMPILER_ENABLE_CUDNN})
-else()
-    set(DEFAULT_CHAINER_COMPILER_ENABLE_CUDNN OFF)
-endif()
-option(CHAINER_COMPILER_ENABLE_CUDNN "Enable CUDNN" ${DEFAULT_CHAINER_COMPILER_ENABLE_CUDNN})
-
-if(DEFINED ENV{CHAINER_COMPILER_ENABLE_NVTX})
-    set(DEFAULT_CHAINER_COMPILER_ENABLE_NVTX $ENV{CHAINER_COMPILER_ENABLE_NVTX})
-else()
-    set(DEFAULT_CHAINER_COMPILER_ENABLE_NVTX OFF)
-endif()
-option(CHAINER_COMPILER_ENABLE_NVTX "Enable NVTX" ${DEFAULT_CHAINER_COMPILER_ENABLE_NVTX})
-
-if(DEFINED ENV{CHAINER_COMPILER_ENABLE_NVRTC})
-    set(DEFAULT_CHAINER_COMPILER_ENABLE_NVRTC $ENV{CHAINER_COMPILER_ENABLE_NVRTC})
-else()
-    set(DEFAULT_CHAINER_COMPILER_ENABLE_NVRTC OFF)
-endif()
-option(CHAINER_COMPILER_ENABLE_NVRTC "Enable NVRTC" ${DEFAULT_CHAINER_COMPILER_ENABLE_NVRTC})
-
-if(DEFINED ENV{CHAINER_COMPILER_ENABLE_OPENCV})
-    set(DEFAULT_CHAINER_COMPILER_ENABLE_OPENCV $ENV{CHAINER_COMPILER_ENABLE_OPENCV})
-else()
-    set(DEFAULT_CHAINER_COMPILER_ENABLE_OPENCV OFF)
-endif()
-option(CHAINER_COMPILER_ENABLE_OPENCV "Enable OPENCV" ${DEFAULT_CHAINER_COMPILER_ENABLE_OPENCV})
-
-if(DEFINED ENV{CHAINER_COMPILER_ENABLE_PYTHON})
-    set(DEFAULT_CHAINER_COMPILER_ENABLE_PYTHON $ENV{CHAINER_COMPILER_ENABLE_PYTHON})
-else()
-    set(DEFAULT_CHAINER_COMPILER_ENABLE_PYTHON OFF)
-endif()
-option(CHAINER_COMPILER_ENABLE_PYTHON "Enable PYTHON" ${DEFAULT_CHAINER_COMPILER_ENABLE_PYTHON})
-
-if(DEFINED ENV{CHAINER_COMPILER_ENABLE_TVM})
-    set(DEFAULT_CHAINER_COMPILER_ENABLE_TVM $ENV{CHAINER_COMPILER_ENABLE_TVM})
-else()
-    set(DEFAULT_CHAINER_COMPILER_ENABLE_TVM OFF)
-endif()
-option(CHAINER_COMPILER_ENABLE_TVM "Enable TVM" ${DEFAULT_CHAINER_COMPILER_ENABLE_TVM})
+set_option_ (CHAINER_COMPILER_BUILD_CUDA    "Build CUDA backend (if CUDA is available)")
+set_option_ (CHAINER_COMPILER_ENABLE_CUDNN  "Enable CUDNN")
+set_option_ (CHAINER_COMPILER_ENABLE_NVTX   "Enable NVTX")
+set_option_ (CHAINER_COMPILER_ENABLE_NVRTC  "Enable NVRTC")
+set_option_ (CHAINER_COMPILER_ENABLE_OPENCV "Enable OPENCV")
+set_option_ (CHAINER_COMPILER_ENABLE_PYTHON "Enable PYTHON")
+set_option_ (CHAINER_COMPILER_ENABLE_TVM    "Enable TVM")
 
 option(CHAINER_COMPILER_NGRAPH_DIR "The path to ngraph_dist" OFF)
 
 option(CHAINER_COMPILER_BUILD_TESTS "Build C++ tests" ON)
 option(CHAINER_COMPILER_GENERATE_TESTS "Generate tests for scripts/runtests.py" ON)
 
-if(${CHAINER_COMPILER_GENERATE_TESTS})
+if(CHAINER_COMPILER_GENERATE_TESTS)
   set(CHAINER_COMPILER_TEST_ALL ALL)
 else()
   set(CHAINER_COMPILER_TEST_ALL "")
