Fix by PR comments

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -40,6 +40,7 @@ add_library(chainer_compiler_compiler
   code_emitter.cc
   constant_propagation.cc
   config.cc
+  computation_order/core.cc
   computation_order/policy_dummy.cc
   computation_order/policy_chen.cc
   custom_onnx_ops.cc
