Add protobuf as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "third_party/onnx-chainer"]
 	path = third_party/onnx-chainer
 	url = https://github.com/chainer/onnx-chainer
+[submodule "protobuf"]
+	path = third_party/protobuf
+	url = https://github.com/protocolbuffers/protobuf.git
