Overwrite protobuf's option in recent cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,7 +85,7 @@ if (${CHAINER_COMPILER_USE_SYSTEM_PROTOBUF})
   set(PROTOC_EXECUTABLE protoc)
   set(PROTOBUF_LIBRARY protobuf)
 else()
-  set(protobuf_BUILD_TESTS OFF)
+  set(protobuf_BUILD_TESTS OFF CACHE "" INTERNAL FORCE)
   add_subdirectory(third_party/protobuf/cmake EXCLUDE_FROM_ALL)
   include_directories(third_party/protobuf/src)
   set(PROTOC_EXECUTABLE ${CMAKE_CURRENT_BINARY_DIR}/third_party/protobuf/cmake/protoc)
