Use gen_onnx_proto target instead of onnx_files

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -21,7 +21,7 @@ target_link_libraries(common_test
   gtest_main
   pthread
   )
-add_dependencies(common_test onnx_files)
+add_dependencies(common_test gen_onnx_proto)
 
 add_test(
   NAME common_test
