--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -29,7 +29,7 @@ set_target_properties(dump PROPERTIES OUTPUT_NAME "dump")
 add_library(run_onnx_lib
   run_onnx.cc
   )
-add_dependencies(run_onnx_lib runtime_xcvm_pb_h onnx_files)
+add_dependencies(run_onnx_lib runtime_xcvm_pb_h gen_onnx_proto)
 set_hidden_(run_onnx_lib)
 
 add_executable(run_onnx run_onnx_main.cc)
@@ -53,11 +53,11 @@ if(${CHAINER_COMPILER_ENABLE_OPENCV})
   add_library(train_imagenet_lib
     train_imagenet.cc
     )
-  add_dependencies(run_onnx_lib runtime_xcvm_pb_h onnx_files)
+  add_dependencies(run_onnx_lib runtime_xcvm_pb_h gen_onnx_proto)
   set_hidden_(train_imagenet_lib)
 
   add_executable(train_imagenet train_imagenet_main.cc)
-  add_dependencies(train_imagenet runtime_xcvm_pb_h onnx_files)
+  add_dependencies(train_imagenet runtime_xcvm_pb_h gen_onnx_proto)
   target_link_libraries(train_imagenet
     train_imagenet_lib
     chainer_compiler_tools
