Use OpenMP for ROI pooling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,9 +43,10 @@ endfunction()
 
 set_option_(CHAINER_COMPILER_BUILD_CUDA    "Build CUDA backend (if CUDA is available)")
 set_option_(CHAINER_COMPILER_ENABLE_CUDNN  "Enable CUDNN")
-set_option_(CHAINER_COMPILER_ENABLE_NVTX   "Enable NVTX")
 set_option_(CHAINER_COMPILER_ENABLE_NVRTC  "Enable NVRTC")
+set_option_(CHAINER_COMPILER_ENABLE_NVTX   "Enable NVTX")
 set_option_(CHAINER_COMPILER_ENABLE_OPENCV "Enable OPENCV")
+set_option_(CHAINER_COMPILER_ENABLE_OPENMP "Enable OPENMP")
 set_option_(CHAINER_COMPILER_ENABLE_PYTHON "Enable PYTHON")
 set_option_(CHAINER_COMPILER_ENABLE_TVM    "Enable TVM")
 set_option_(CHAINER_COMPILER_USE_SYSTEM_PROTOBUF "Use protobuf installed in the system")
@@ -121,6 +122,17 @@ add_definitions(-DONNX_NAMESPACE=${ONNX_NAMESPACE})
 # OpenCV
 if(${CHAINER_COMPILER_ENABLE_OPENCV})
   find_package(OpenCV REQUIRED)
+endif()
+
+if(${CHAINER_COMPILER_ENABLE_OPENMP})
+  find_package(OpenMP)
+  if (OPENMP_FOUND)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    add_definitions(-DCHAINER_COMPILER_ENABLE_OPENMP=1)
+  else()
+    error("OpenMP not found")
+  endif()
 endif()
 
 # Make both chainer-compiler and ChainerX consistent.
