--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,7 +1,7 @@
 get_filename_component(CHAINER_COMPILER_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} PATH)
 include_directories(${CHAINER_COMPILER_ROOT_DIR})
 include_directories(${PYTHON_INCLUDE_DIRS})
-include_directories(${CMAKE_BINARY_DIR})
+include_directories(${CMAKE_CURRENT_BINARY_DIR}/..)
 
 add_library(chainer_compiler_core.so MODULE chainer_compiler_core.cc)
 target_link_libraries(chainer_compiler_core.so
