--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -5,7 +5,7 @@ set(OPTIONALLITE_INCLUDE_DIRS ${CHAINER_COMPILER_ROOT_DIR}/optional-lite/include
 include_directories(${GSLLITE_INCLUDE_DIRS})
 include_directories(${OPTIONALLITE_INCLUDE_DIRS})
 include_directories(${CHAINER_COMPILER_ROOT_DIR})
-include_directories(${CMAKE_BINARY_DIR}) # the root directory instead of `build/tools`
+include_directories(${CMAKE_CURRENT_BINARY_DIR}/..)
 
 include_directories(${CUDA_INCLUDE_DIRS})
 
