--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -33,7 +33,7 @@ add_custom_target(
 include_directories(${GSLLITE_INCLUDE_DIRS})
 include_directories(${OPTIONALLITE_INCLUDE_DIRS})
 include_directories(${CHAINER_COMPILER_ROOT_DIR})
-include_directories(${CMAKE_BINARY_DIR}) # the root directory instead of `build/compiler`
+include_directories(${CMAKE_CURRENT_BINARY_DIR}/..)
 include_directories(${CHAINER_COMPILER_TVM_INCLUDE_DIRS})
 
 add_library(chainer_compiler_compiler
