--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -21,7 +21,11 @@ target_link_libraries(dump
   onnx_proto
   chainer_compiler_tools
   chainer_compiler_compiler
+  chainer_compiler_runtime
   chainer_compiler_common
+  chainerx
+  onnx
+  onnx_proto
   ${PROTOBUF_LIBRARY}
   )
 set_target_properties(dump PROPERTIES OUTPUT_NAME "dump")
