--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -13,7 +13,10 @@ add_library(chainer_compiler_tools
   compiler_flags.cc
   util.cc
   )
-add_dependencies(chainer_compiler_tools runtime_xcvm_pb_h)
+add_dependencies(
+  chainer_compiler_tools
+  runtime_xcvm_pb_h gen_node_base_h gen_onnx_proto
+  )
 set_hidden_(chainer_compiler_tools)
 
 add_executable(dump dump.cc)
@@ -38,7 +41,10 @@ set_target_properties(dump PROPERTIES OUTPUT_NAME "dump")
 add_library(run_onnx_lib
   run_onnx.cc
   )
-add_dependencies(run_onnx_lib runtime_xcvm_pb_h gen_onnx_proto)
+add_dependencies(
+  run_onnx_lib
+  runtime_xcvm_pb_h gen_node_base_h gen_onnx_proto
+  )
 set_hidden_(run_onnx_lib)
 
 add_executable(run_onnx run_onnx_main.cc)
@@ -62,11 +68,17 @@ if(${CHAINER_COMPILER_ENABLE_OPENCV})
   add_library(train_imagenet_lib
     train_imagenet.cc
     )
-  add_dependencies(train_imagenet_lib runtime_xcvm_pb_h gen_onnx_proto)
+  add_dependencies(
+    train_imagenet_lib
+    runtime_xcvm_pb_h gen_node_base_h gen_onnx_proto
+    )
   set_hidden_(train_imagenet_lib)
 
   add_executable(train_imagenet train_imagenet_main.cc)
-  add_dependencies(train_imagenet runtime_xcvm_pb_h gen_onnx_proto)
+  add_dependencies(
+    train_imagenet
+    runtime_xcvm_pb_h gen_node_base_h gen_onnx_proto
+    )
   target_link_libraries(train_imagenet
     train_imagenet_lib
     chainer_compiler_tools
