Add nlohmann/json as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "protobuf"]
 	path = third_party/protobuf
 	url = https://github.com/protocolbuffers/protobuf.git
+[submodule "third_party/json"]
+	path = third_party/json
+	url = https://github.com/nlohmann/json
